--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -284,7 +284,7 @@ jobs:
     needs: build
     if: needs.build.outputs.is_release == 'true'
 
-    environment: production
+    environment: nuget.org
 
     permissions:
       contents: write
