--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -330,6 +330,9 @@ jobs:
       id-token: write  # Required for NuGet trusted publishing
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Download package artifact
         uses: actions/download-artifact@v4
         with:
